maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:15: error: not found: value baggleWidth
  wallMark(baggleWidth,baggleHeight,count)
           ^ShortestPathMaze:15: error: not found: value baggleHeight
  wallMark(baggleWidth,baggleHeight,count)
                       ^