maze.shortestpath.ShortestPathMaze.scala.code
override def run() {
  var count:Int=1
  var height:Int=getWorldHeight()
  var width:Int=getWorldWidth()
  for (i <- 0 to width-1) {
    for(j <- 0 to getWorldHeight()-1) {
      if(hasBaggle(i,j)) {
        setIndication(i,j,0);
        var baggleHeight:Int=j;
        var baggleWight:Int=i;
      }
    }
  }
  wallMark(baggleWidth,baggleHeight,count)
}

def wallMark(x:Int,y:Int,c:Int) {
  if (!hasTopWall(x,y) && y!=0) {
    setIndication(x,y-1,c+1)
  }
  if (!hasLeftWall(x,y) && x!=0) {
    setIndication(x-1,y,c+1)
  }
  if (!hasTopWall(x,y+1) && y!=getWorldHeight()-1) {
    setIndication(x,y+1,c+1)
  }
  if (!hasLeftWall(x+1,y) && x!=getWorldWidth()-1) {
    setIndication(x+1,y,c+1)
  }
}